tests/ui/parser/using_operator_empty_string.sol
using {f as ""} for uint256; //~ ERROR: expected
